RESOLVED FIXED191914
Regression(r238353) Load sometimes hangs when navigating back after a cross-site navigation
https://bugs.webkit.org/show_bug.cgi?id=191914
Summary Regression(r238353) Load sometimes hangs when navigating back after a cross-s...
Rob Buis
Reported 2018-11-22 12:53:40 PST
Steps to repro: 1. Start mini browser 2. Go to google.com 3. Search for something, for example I entered "autosport". 4. Click a hit. 5. Go back. At this point google.com is indicated in the location bar but nothing is rendered. A bit later mini browser will likely crash.
Attachments
Patch (3.72 KB, patch)
2018-11-22 17:10 PST, Chris Dumez
no flags
Rob Buis
Comment 1 2018-11-22 12:55:50 PST
Assigning to Chris since my bisecting seems to point to https://bugs.webkit.org/show_bug.cgi?id=191781. First of all I would be interested if it is reproducible or just my system/setup though.
Chris Dumez
Comment 2 2018-11-22 13:37:57 PST
Will look, thanks.
Chris Dumez
Comment 3 2018-11-22 13:40:19 PST
Do you process "Process Swap on Cross-Site navigation" enabled in experimental features?
Chris Dumez
Comment 4 2018-11-22 14:44:10 PST
(In reply to Chris Dumez from comment #3) > Do you process "Process Swap on Cross-Site navigation" enabled in > experimental features? Do you *have* "Process Swap on Cross-Site navigation" enabled in experimental features?
Chris Dumez
Comment 5 2018-11-22 14:53:47 PST
> A bit later mini browser will likely crash. Crash log? I wasn't able to reproduce in Safari. Will try Minibrowser soon.
Chris Dumez
Comment 6 2018-11-22 15:37:11 PST
Ok, I was able to reproduce in Minibrowser.
Chris Dumez
Comment 7 2018-11-22 15:44:42 PST
I see a DecidePolicyForResponse sent why the about-to-be-suspended process to the SuspendedPageProxy but no DidFinishLoadForFrame.
Chris Dumez
Comment 8 2018-11-22 15:55:50 PST
(In reply to Chris Dumez from comment #7) > I see a DecidePolicyForResponse sent why the about-to-be-suspended process > to the SuspendedPageProxy but no DidFinishLoadForFrame. In Safari, I get no DecidePolicyForNavigationResponse and I get a DidFinishProgress IPC.
Chris Dumez
Comment 9 2018-11-22 16:02:17 PST
DocumentLoader::maybeLoadEmpty() returns false in Minibrowser but true in Safari. It returns false because SchemeRegistry::shouldLoadURLSchemeAsEmptyDocument(m_request.url().protocol().toStringWithoutCopying())) check fails
Chris Dumez
Comment 10 2018-11-22 17:10:57 PST
WebKit Commit Bot
Comment 11 2018-11-22 20:36:47 PST
Comment on attachment 355493 [details] Patch Clearing flags on attachment: 355493 Committed r238456: <https://trac.webkit.org/changeset/238456>
WebKit Commit Bot
Comment 12 2018-11-22 20:36:49 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 13 2018-11-22 20:37:28 PST
Rob Buis
Comment 14 2018-11-23 03:36:11 PST
(In reply to Chris Dumez from comment #3) > Do you process "Process Swap on Cross-Site navigation" enabled in > experimental features? I did have that enabled. Thanks for fixing!
Note You need to log in before you can comment on or make changes to this bug.