Source/WebKit/WebProcess/WebCoreSupport/WebFrameLoaderClient.cpp
@@ -738,6 +738,12 @@ void WebFrameLoaderClient::dispatchDecidePolicyForResponse(const ResourceRespons
         return;
     }
 
+    // For suspension loads to about:blank, no need to ask the SuspendedPageProxy.
+    if (request.url() == blankURL() && webPage->isSuspended()) {
+        function(PolicyAction::Use);
+        return;
+    }
+
     RefPtr<API::Object> userData;
 
     // Notify the bundle client.
